# demo-os

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  compose.yaml  example.env  pyproject.toml  railway.json  railway.staging.json  requirements.txt
.github/workflows/: promote-to-prod.yml  smoke-testing.yml
agents/: context.py  inbox.py  instructions.py  policy.py  reminders.py  sources.py
agents/approvals/: agent.py  instructions.py  tools.py
agents/coda/: __init__.py  team.py
agents/compressor/: agent.py
agents/contacts/: instructions.py
agents/craftsman/: agent.py
agents/dash/: instructions.py  team.py
agents/docs/: agent.py
agents/feedback/: instructions.py
agents/helpdesk/: agent.py  instructions.py
agents/injector/: agent.py  instructions.py
agents/knowledge/: __init__.py  instructions.py
agents/mcp/: agent.py  instructions.py
agents/pal/: __init__.py  instructions.py  team.py
agents/reasoner/: agent.py  instructions.py
agents/reporter/: agent.py  (+1 more)
app/: config.yaml  identity.py  main.py  mcp.py  registry.py  schedules.py  settings.py
db/: schema.py  session.py
docs/: CRM.md  EVALS.md  GOOGLE.md  KNOWLEDGE.md  MCP.md  NETWORK.md  SCALING.md  SECURITY.md  SLACK.md  SLACK_CONNECT.md
evals/: IMPROVE.md  __init__.py  __main__.py  cases.py  client.py  dotenv.py  improve.py  judge.py  registry.py  reliability.py  smoke.py
scripts/: connect.py  entrypoint.sh  google_mint_tokens.py  mint_mcp_jwt.py  railway_redeploy.sh  railway_up.sh  setup_context.sh  setup_production_mcp.sh
workflows/: __init__.py  digest.py  notify.py  reminders.py
(+83 files in other folders)
