[project]
name = "context"
version = "1.0.0"
description = "@context — a self-hosted context agent, built on Agno."
requires-python = ">=3.12,<4"
readme = "README.md"
license-files = ["LICENSE"]
authors = [{ name = "Agno", email = "hello@agno.com" }]

dependencies = [
  "agno[os,slack]",
  "fastapi[standard]",
  # AgentOS's MCP server (enable_mcp_server) imports fastmcp at runtime, but agno
  # only declares it in its test extra — so @context must depend on it directly.
  # Pinned <3 because agno 2.6.x targets the fastmcp 2.x API.
  "fastmcp<3",
  "google-api-python-client",
  "google-auth-httplib2",
  "google-auth-oauthlib",
  "mcp",
  "openai",
  "parallel-web==0.6.0",
  "pgvector",
  "psycopg[binary]",
  "sqlalchemy",
]

[project.optional-dependencies]
dev = ["mypy", "ruff"]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["agents*", "app*", "db*", "evals*", "workflows*"]

[tool.ruff]
line-length = 120
exclude = [".venv*"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401", "F403"]

[tool.mypy]
check_untyped_defs = true
no_implicit_optional = true
warn_unused_configs = true
plugins = ["pydantic.mypy"]
exclude = [".venv*"]

[[tool.mypy.overrides]]
module = ["agno.*", "httpx.*", "mcp.*", "sqlalchemy.*", "fastapi.*", "googleapiclient.*"]
ignore_missing_imports = true

[tool.uv.pip]
no-annotate = true
